--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-This is your new Play application
-=================================
 
-This file will be packaged with your application, when using `activator dist`.
+Laboratory 3 of the Systems Information course from Computer Science UFCG.
+==================================================================
+
+The objective of this system is to be a service that helps stakeholders to find partners to form bands or playing together on sporadic occasions
